# Vexora

./: .gitignore  CMakeLists.txt  vcpkg.json
docs/: sample.txt
include/vexora/: document_chunk.hpp
src/: main.cpp
src/ingestion/: directory_scanner.cpp  directory_scanner.hpp  document_loader.cpp  document_loader.hpp  text_chunker.cpp  text_chunker.hpp
tests/: sample_test.cpp
